--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -3,211 +3,238 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gerenciar Produtos</title>
+  <meta name="google-adsense-account" content="ca-pub-4531749081462125">
+  <meta name="twitter:card" content="summary_large_image">
+  <title>Centro de Compras - Ofertas do Dia</title>
+
+  <!-- Google Adsense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css">
+
+  <!-- Seu CSS -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Favicon e ícones -->
+  <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png" />
+  <link rel="manifest" href="logos/site.webmanifest" />
 </head>
 <body>
-  <h1>Adicionar Produto</h1>
-  <form id="form-produto" enctype="multipart/form-data">
-    <input type="text" name="nome" placeholder="Nome do produto" required />
-    <textarea name="descricao" placeholder="Descrição do produto" required></textarea>
-    <select name="categoria" required>
-      <option value="" disabled selected>Selecione uma categoria</option>
-      <option value="eletronicos">Eletrônicos</option>
-      <option value="moda">Moda</option>
-      <option value="fitness">Fitness</option>
-      <option value="casa">Casa e Decoração</option>
-      <option value="beleza">Beleza</option>
-      <option value="esportes">Esportes</option>
-      <option value="livros">Livros</option>
-      <option value="infantil">Infantil</option>
-      <option value="celulares">Celulares</option>
-      <option value="eletrodomesticos">Eletrodomésticos</option>
-      <option value="pet">Pet</option>
-      <option value="jardinagem">Jardinagem</option>
-      <option value="automotivo">Automotivo</option>
-      <option value="gastronomia">Gastronomia</option>
-      <option value="games">Games</option>
-    </select>
-    <select name="loja" required>
-      <option value="" disabled selected>Selecione uma loja</option>
-      <option value="amazon">Amazon</option>
-      <option value="magalu">Magalu</option>
-      <option value="shein">Shein</option>
-      <option value="shopee">Shopee</option>
-      <option value="mercadolivre">Mercado Livre</option>
-      <option value="alibaba">Alibaba</option>
-    </select>
-    <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+" />
-    <input type="number" name="preco" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" required />
-    <input type="file" name="imagens" accept="image/*" multiple required />
-    <button type="submit">Adicionar</button>
-  </form>
-  <div id="mensagem"></div>
-  <div id="erro"></div>
+  <header class="site-header">
+    <div class="logo-container">
+      <a href="index.html">
+        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50" />
+      </a>
+    </div>
+    <div class="header-text">
+      <h1>Centro de Compra</h1>
+      <p>O maior portal de compras do Brasil! Encontre as melhores ofertas.</p>
+    </div>
+  </header>
 
-  <div id="produtos-cadastrados">
-    <h3>Produtos Cadastrados</h3>
-    <table>
-      <thead>
-        <tr>
-          <th>Nome</th>
-          <th>Descrição</th>
-          <th>Categoria</th>
-          <th>Loja</th>
-          <th>Link</th>
-          <th>Preço</th>
-          <th>Imagens</th>
-          <th>Ação</th>
-        </tr>
-      </thead>
-      <tbody id="lista-produtos">
-        <tr><td colspan="8" style="text-align:center;">Carregando produtos...</td></tr>
-      </tbody>
-    </table>
+  <nav>
+    <a href="index.html">Promoções</a>
+    <a href="cupom.html">Cupom de Desconto</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+
+  <div class="container">
+    <aside class="sidebar">
+      <h3>Categorias</h3>
+      <ul>
+        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')">Todas</li>
+        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')">Eletrônicos</li>
+        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')">Moda</li>
+        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')">Fitness</li>
+        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')">Casa</li>
+        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')">Beleza</li>
+        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')">Esportes</li>
+        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')">Livros</li>
+        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')">Infantil</li>
+        <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')">Celulares</li>
+        <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')">Eletrodomésticos</li>
+        <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')">Pet</li>
+        <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')">Jardinagem</li>
+        <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')">Automotivo</li>
+        <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')">Gastronomia</li>
+        <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')">Games</li>
+      </ul>
+    </aside>
+
+    <main>
+      <section>
+        <h2>🛍️ Ofertas do Dia</h2>
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:728px;height:90px"
+             data-ad-client="ca-pub-4531749081462125"
+             data-ad-slot="5690664546"></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
+        <div class="lojas-parceiras">
+          <h3>🌟 Lojas Parceiras</h3>
+          <div class="grid-lojas">
+            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
+            <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
+              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40" /><span>Amazon</span>
+            </div>
+            <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
+              <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40" /><span>Magalu</span>
+            </div>
+            <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
+              <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40" /><span>Shein</span>
+            </div>
+            <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
+              <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40" /><span>Shopee</span>
+            </div>
+            <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
+              <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40" /><span>Mercado Livre</span>
+            </div>
+            <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
+              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40" /><span>Alibaba</span>
+            </div>
+          </div>
+        </div>
+
+        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" />
+
+        <div id="busca-feedback" class="busca-feedback"></div>
+        <div class="loading-spinner" id="loading-spinner" style="display:none;">Carregando...</div>
+
+        <div class="grid-produtos" id="grid-produtos"></div>
+
+        <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
+        <p class="error-message" id="error-message" style="display: none;"></p>
+
+        <div class="paginacao" id="paginacao" style="display:none;">
+          <button id="prev-page" disabled>Anterior</button>
+          <span id="page-info">Página 1</span>
+          <button id="next-page">Próxima</button>
+        </div>
+      </section>
+
+      <div class="social-links">
+        <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer">
+          <img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="40" height="40" />
+          TikTok
+        </a>
+        <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer">
+          <img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="40" height="40" />
+          Instagram
+        </a>
+        <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer">
+          <img src="logos/X.png" alt="X" loading="lazy" width="40" height="40" />
+          X
+        </a>
+        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer">
+          <img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40" />
+          YouTube
+        </a>
+      </div>
+
+      <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer">📲 WhatsApp</a>
+      <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer">📢 Telegram</a>
+    </main>
   </div>
 
-  <script type="module" src="firebase.js"></script>
-  <script type="module">
-    import { collection, addDoc, getDocs, deleteDoc, doc } from 'firebase/firestore';
-    import { ref, uploadBytes, getDownloadURL } from 'firebase/storage';
+  <footer>
+    <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
+    <div class="credibilidade-nota">
+      <p><strong>Sobre credibilidade:</strong> É importante notar que esse site é apenas um portal de descontos e afiliado, não uma loja direta. Ele redireciona para plataformas terceiras. Verifique sempre se o cupom é válido diretamente na loja original, pois promoções podem expirar ou não se aplicar a certos produtos.</p>
+    </div>
+  </footer>
 
-    const db = window.firebaseDb;
-    const storage = window.firebaseStorage;
+  <div class="robo-assistente">
+    <a href="https://api.whatsapp.com/send?phone=5521975179737" target="_blank" rel="noopener noreferrer">
+      <img src="logos/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60" />
+      <div class="robo-texto">Posso ajudar?</div>
+    </a>
+  </div>
 
-    const formProduto = document.getElementById('form-produto');
-    const mensagem = document.getElementById('mensagem');
-    const erro = document.getElementById('erro');
-    const listaProdutos = document.getElementById('lista-produtos');
+  <!-- Firebase SDK Compat (sem módulos) -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-analytics-compat.js"></script>
 
+  <script>
+    // Configuração do Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyDryJc0Y7JV_Os5DZdEDts5XaFUEtJ7wDk",
+      authDomain: "centrodecompra-5fa91.firebaseapp.com",
+      projectId: "centrodecompra-5fa91",
+      storageBucket: "centrodecompra-5fa91.appspot.com",
+      messagingSenderId: "276696026262",
+      appId: "1:276696026262:web:979a68c0796ea1d17346b7",
+      measurementId: "G-PM11NQL61N"
+    };
+
+    // Inicializa Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+
+    // Atalhos para Firestore e Storage
+    window.firebaseDb = firebase.firestore();
+    window.firebaseStorage = firebase.storage();
+
+    // Função para carregar produtos do Firestore e mostrar na página
     async function carregarProdutos() {
+      const grid = document.getElementById('grid-produtos');
+      const mensagemVazia = document.getElementById('mensagem-vazia');
+      const errorMessage = document.getElementById('error-message');
+      const loadingSpinner = document.getElementById('loading-spinner');
+
+      mensagemVazia.style.display = 'none';
+      errorMessage.style.display = 'none';
+      loadingSpinner.style.display = 'block';
+
       try {
-        listaProdutos.innerHTML = '<tr><td colspan="8" style="text-align:center;">Carregando produtos...</td></tr>';
-        const querySnapshot = await getDocs(collection(db, 'produtos'));
+        const snapshot = await window.firebaseDb.collection('produtos').get();
         const produtos = [];
-        querySnapshot.forEach((doc) => {
+        snapshot.forEach(doc => {
           produtos.push({ id: doc.id, ...doc.data() });
         });
-        preencherTabela(produtos);
-      } catch (err) {
-        listaProdutos.innerHTML = `<tr><td colspan="8" style="color:red;text-align:center;">Erro ao carregar produtos: ${err.message}</td></tr>`;
-      }
-    }
 
-    function preencherTabela(produtos) {
-      listaProdutos.innerHTML = '';
-      if (produtos.length === 0) {
-        listaProdutos.innerHTML = '<tr><td colspan="8" style="text-align:center;">Nenhum produto cadastrado.</td></tr>';
-        return;
-      }
-      produtos.forEach((produto) => {
-        const precoFormatado = `R$ ${parseFloat(produto.preco).toFixed(2).replace('.', ',')}`;
-        const imagens = produto.imagens || [];
-        const miniaturas = imagens.length > 0
-          ? imagens.map((img, i) => `<img src="${img}" class="thumbnail" alt="Imagem ${i + 1}" />`).join('')
-          : 'Sem imagens';
+        loadingSpinner.style.display = 'none';
 
-        listaProdutos.innerHTML += `
-          <tr>
-            <td>${produto.nome}</td>
-            <td>${produto.descricao || 'N/A'}</td>
-            <td>${produto.categoria}</td>
-            <td>${produto.loja}</td>
-            <td><a href="${produto.link}" target="_blank" rel="noopener noreferrer">Link</a></td>
-            <td>${precoFormatado}</td>
-            <td>${miniaturas}</td>
-            <td><button class="excluir" onclick="excluirProduto('${produto.id}')">Excluir</button></td>
-          </tr>
-        `;
-      });
-    }
+        if (produtos.length === 0) {
+          mensagemVazia.style.display = 'block';
+          grid.innerHTML = '';
+          return;
+        }
 
-    async function excluirProduto(id) {
-      if (!confirm('Confirma a exclusão deste produto?')) return;
-      try {
-        await deleteDoc(doc(db, 'produtos', id));
-        alert('Produto excluído com sucesso');
-        carregarProdutos();
-      } catch (err) {
-        alert(`Erro ao excluir produto: ${err.message}`);
-      }
-    }
-
-    async function uploadImagens(files) {
-      const imageUrls = [];
-      for (const file of files) {
-        const storageRef = ref(storage, `imagens/${Date.now()}_${file.name}`);
-        await uploadBytes(storageRef, file);
-        const url = await getDownloadURL(storageRef);
-        imageUrls.push(url);
-      }
-      return imageUrls;
-    }
-
-    formProduto.addEventListener('submit', async (event) => {
-      event.preventDefault();
-      const formData = new FormData(event.target);
-      mensagem.textContent = '';
-      erro.textContent = '';
-
-      try {
-        const imagens = formData.getAll('imagens');
-        const imageUrls = await uploadImagens(imagens);
-
-        const produto = {
-          nome: formData.get('nome'),
-          descricao: formData.get('descricao'),
-          categoria: formData.get('categoria'),
-          loja: formData.get('loja'),
-          link: formData.get('link'),
-          preco: parseFloat(formData.get('preco')),
-          imagens: imageUrls,
-          criadoEm: new Date().toISOString()
-        };
-
-        await addDoc(collection(db, 'produtos'), produto);
-
-        mensagem.textContent = 'Produto adicionado com sucesso!';
-        formProduto.reset();
-        carregarProdutos();
+        grid.innerHTML = produtos.map(prod => `
+          <div class="produto-item">
+            <h3>${prod.nome}</h3>
+            <p>${prod.descricao}</p>
+            <p>Preço: R$ ${parseFloat(prod.preco).toFixed(2).replace('.', ',')}</p>
+            <a href="${prod.link}" target="_blank" rel="noopener noreferrer">Comprar</a>
+            ${prod.imagens && prod.imagens.length > 0 ? `<img src="${prod.imagens[0]}" alt="${prod.nome}" style="max-width:150px;" />` : ''}
+          </div>
+        `).join('');
       } catch (error) {
-        erro.textContent = `Erro ao adicionar produto: ${error.message}`;
+        loadingSpinner.style.display = 'none';
+        errorMessage.style.display = 'block';
+        errorMessage.textContent = `Erro ao carregar produtos: ${error.message}`;
+        console.error(error);
       }
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      carregarProdutos();
+
+      // Atualizar ano no rodapé
+      document.getElementById('year').textContent = new Date().getFullYear();
     });
 
-    document.addEventListener('DOMContentLoaded', carregarProdutos);
-    <script type="module" src="firebase.js"></script>
-<!-- Firebase App (core) -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-
-<!-- Firestore -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-
-<!-- Storage -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
-
-<!-- Analytics -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-analytics-compat.js"></script>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyDryJc0Y7JV_Os5DZdEDts5XaFUEtJ7wDk",
-    authDomain: "centrodecompra-5fa91.firebaseapp.com",
-    projectId: "centrodecompra-5fa91",
-    storageBucket: "centrodecompra-5fa91.appspot.com",
-    messagingSenderId: "276696026262",
-    appId: "1:276696026262:web:979a68c0796ea1d17346b7",
-    measurementId: "G-PM11NQL61N"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-
-  window.firebaseDb = firebase.firestore();
-  window.firebaseStorage = firebase.storage();
-</script>
-
+    // Funções filtrarPorCategoria e filtrarPorLoja podem ser implementadas conforme necessidade
   </script>
 </body>
 </html>
